<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:padding="5dp">

<LinearLayout
    android:id="@+id/eye_res_ll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="5dp"
    android:visibility="gone">

    <LinearLayout
        android:id="@+id/right_eye_res_ll"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/right_eye_res_et"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/input_bg"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:minHeight="40dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:singleLine="true"
            android:textSize="20sp" />

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/right_eye"
            android:textColor="@color/black"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/left_eye_res_ll"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/left_eye_res_et"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/input_bg"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:minHeight="40dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:singleLine="true"
            android:textSize="20sp" />

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/left_eye"
            android:textColor="@color/black"
            android:textSize="14sp" />


    </LinearLayout>
</LinearLayout>

<LinearLayout
    android:id="@+id/glass_eye_res_ll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="5dp"
    android:visibility="gone">

    <LinearLayout
        android:id="@+id/right_glass_eye_res_ll"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/right_glass_eye_res_et"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/input_bg"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:minHeight="40dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:singleLine="true"
            android:textSize="20sp" />

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/right_glass_eye"
            android:textColor="@color/black"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/left_glass_eye_res_ll"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/left_glass_eye_res_et"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/input_bg"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:minHeight="40dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:singleLine="true"
            android:textSize="20sp" />

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/left_glass_eye"
            android:textColor="@color/black"
            android:textSize="14sp" />

    </LinearLayout>
</LinearLayout>

<RadioGroup
    android:id="@+id/tag_rg"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:orientation="horizontal">

    <RadioButton
        android:id="@+id/tag_squint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:button="@drawable/checkbox_selector"
        android:padding="10dp"
        android:text="@string/tag_squint" />

    <RadioButton
        android:id="@+id/tag_attention"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:button="@drawable/myselector"
        android:padding="10dp"
        android:text="@string/tag_attention" />
</RadioGroup>

<View
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:background="#F0F0F0"></View>

<!--<nearf.cn.eyetest.view.CustomRadioGroup-->
    <!--android:id="@+id/glassType_rg"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginTop="10dp"-->
    <!--android:gravity="center"-->
    <!--android:orientation="vertical">-->

    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:orientation="horizontal">-->
        <!--<RadioButton-->
            <!--android:id="@+id/glassType_0_rb"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="1"-->
            <!--android:button="@drawable/checkbox_selector"-->
            <!--android:checked="true"-->
            <!--android:padding="10dp"-->
            <!--android:tag="0"-->
            <!--android:text="@string/glassType_0" />-->
        <!--<RadioButton-->
            <!--android:id="@+id/glassType_1_rb"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="1"-->
            <!--android:button="@drawable/checkbox_selector"-->
            <!--android:padding="10dp"-->
            <!--android:tag="1"-->
            <!--android:text="@string/glassType_1" />-->
    <!--</LinearLayout>-->

    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:orientation="horizontal">-->
        <!--<RadioButton-->
            <!--android:id="@+id/glassType_2_rb"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="1"-->
            <!--android:button="@drawable/checkbox_selector"-->
            <!--android:padding="10dp"-->
            <!--android:tag="2"-->
            <!--android:text="@string/glassType_2" />-->
        <!--<RadioButton-->
            <!--android:id="@+id/glassType_3_rb"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="1"-->
            <!--android:button="@drawable/checkbox_selector"-->
            <!--android:padding="10dp"-->
            <!--android:tag="3"-->
            <!--android:text="@string/glassType_3" />-->
    <!--</LinearLayout>-->
<!--</nearf.cn.eyetest.view.CustomRadioGroup>-->

    <LinearLayout
        android:id="@+id/UpdataPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:layout_weight="1"
        android:gravity="left"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"
            android:text="@string/phonenumberstr"
            android:textColor="@color/black"
            android:minHeight="40dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textSize="18sp" />
        <EditText
            android:id="@+id/PhoneNumber"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:background="@drawable/input_bg"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"
            android:inputType="numberDecimal"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:singleLine="true"
            android:textSize="17sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/UpdataClassTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:layout_weight="1"
        android:gravity="left"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:gravity="center_horizontal"
            android:text="@string/classtimestr"
            android:textColor="@color/black"
            android:minHeight="40dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textSize="18sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:gravity="center_horizontal"
            android:text="2019-01-01"
            android:textColor="@color/black"
            android:minHeight="40dp"
            android:paddingLeft="5dp"
            android:paddingRight="0dp"
            android:textSize="19sp" />
    </LinearLayout>

</LinearLayout>
